# litcrypt.rs

./: .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
examples/: simple.rs
src/: litcrypt.rs  xor.rs
tests/: test.rs
xor-rs/: .gitignore  Cargo.toml  LICENSE  README.md
xor-rs/examples/: example.rs
xor-rs/src/: lib.rs
