[package]
name = "litcrypt"
authors = ['Robin Syihab (r@ansvia.com)']
version = "0.4.0"
description = "Let's encrypt your string statically during compile time"
license = "Apache-2.0"
repository = "https://github.com/anvie/litcrypt.rs"
readme = "README.md"
keywords = ["litcrypt", "encrypt", "compile"]

[lib]
proc-macro = true
path = "src/litcrypt.rs"

[dev-dependencies]
expectest = { version = "0.12.0", features = [] }

[dependencies]
quote = "1.0.8"
proc-macro2 = "1.0.24"
rand = "0.8.5"

