[package]
name = "litcrypt2"
authors = ['Robin Syihab (r@ansvia.com)', 'Kurosh Dabbagh Escalante (@_Kudaes_)']
version = "0.1.0"
description = "Let's encrypt your string statically during compile time"
license = "Apache-2.0"
repository = "https://github.com/Kudaes/litcrypt.rs"
readme = "README.md"
keywords = ["litcrypt", "encrypt", "obfuscation"]

[lib]
proc-macro = true
path = "src/litcrypt.rs"

[dev-dependencies]
expectest = { version = "0.12.0", features = [] }

[dependencies]
quote = "1.0.8"
proc-macro2 = "1.0.24"
rand = "0.8.5"
lazy_static = "^1.4.0"
